# FENIX

./: CMakeLists.txt  Circuit.cpp  Circuit.h  CircuitParser.cpp  CircuitParser.h  Gate.cpp  Gate.h  PropVarSet.cpp  PropVarSet.h  README.md  Solver.cpp  Solver.h  VCDStorage.cpp  VCDStorage.h  VerificationContext.cpp  VerificationContext.h  Verifier.cpp  Verifier.h  Z3Checker.cpp  Z3Checker.h  Z3CheckerCA.cpp  Z3CheckerCA.h  helper.cpp  helper.h  labels.txt  main.cpp  model.txt  test.dot  testCircuit.txt
data/: test.cmd
data/finalBenchmarks/biggerDesigns/aesSbox/firstOrder/: aesSbox.json  aesSbox.v  aesSboxNetlist.v  circuit.data  labels.txt
data/finalBenchmarks/biggerDesigns/aesSbox_old/firstOrder/: aes_dom_dep_mul_gf2pn.sv  aes_dom_indep_mul_gf2pn.sv  aes_dom_inverse_gf2p4.sv  aes_dom_inverse_gf2p8.sv  aes_pkg_verilog.sv  aes_sbox_dom.sv  circuit.data  circuit2.data  diff.txt  domAesSbox.json  domAesSbox2.json  domAesSboxNetlist.v  domAesSboxNetlist2.v  labels2.txt
data/finalBenchmarks/biggerDesigns/asconFullRound/firstOrder/: ascon_round.v  (+13 more)
data/finalBenchmarks/examplatory/: circuit.data  example.json  example.v  exampleNetlist.v  labels.txt  readme.txt
data/finalBenchmarks/examplatory2/: circuit.data  example (copy).v  example.json  exampleNetlist.v  example_ascis.v  labels.txt
data/finalBenchmarks/readExample/firstOrder/: circuit.data  example.json  example.v  exampleNetlist.v  labels.txt
data/finalBenchmarks/readShare/firstOrder/: readShare.v  readShare1Bit.json  readShare32.json  readShareNetlist1Bit.v  readShareNetlist32Bit.v
lib/: coco.lib  coco.v
(+70 files in other folders)
